Changes for APR 1.2.0

   *) Add support for uuid_generate on OS X 10.4. [Paul Querna]

   *) Include the C preprocessor flags in --cflags for pkg-config.
      [Paul Querna]

Changes for APR 1.1.1

  *) Disable sendfile support for S/390 only in kernel versions < 2.4.0. 
     [Joe Orton]

  *) Fix posix rwlock detection on Darwin. [Aaron Bannert]

  *) Build fix for Multicast support on HP-UX 11.00 and Tru64 [Joe Orton]

  *) Fix libapr.rc for Win32 builds [William Rowe]

  *) Rewrite apr_file_writev_full using apr_file_write_full. [Paul Querna]

  *) Use APR_RING_CONCAT for moving dead list in KQueue, sys_epoll, and 
     Event Ports. [Paul Querna]

  *) find_apr.m4: Try installed APR before bundled copy if --with-apr not
     passed to configure.  [Justin Erenkrantz]

Changes for APR 1.1.0

  *) Added apr_procattr_user_set and apr_procattr_group_set
     setting the user and group for new processes.  [Mladen Turk]

  *) Add APR Multicast functions; including support for
     Source-Specific Multicast from Colm MacCarthaigh.  [Paul Querna]

  *) Add a build script to create a solaris package.  [Graham Leggett]
  
  *) Add support for APR_TCP_DEFER_ACCEPT.  [Paul Querna]

  *) Rename the apr_file_permissions macros (APR_UREAD, APR_UWRITE etc.)
     to have prefix APR_FPROT_ (old names kept for compatibility).
     [Stas Bekman]

  *) Emit the run-time link path option in apr-config after installation
     if the user is linking with libtool.  [Justin Erenkrantz]

  *) Add apr_file_writev_full to ensure an entire iovec is writen to a file.
     [Paul Querna]

  *) Remove the runtime test for Sendfile versions on FreeBSD. PR 25718.
     [Mike Silbersack <silby silby.com>, Paul Querna]

  *) Rename the apr_file_open macros (APR_READ, APR_WRITE, etc.) to
     have prefix APR_FOPEN_ (old names kept for compatibility).
     [Stas Bekman]

  *) Added apr_os_uuid_get() support for Linux via libuuid and for modern 